src/app/pages/crag/crag-routes/crag-routes.component.scss
@import "~@angular/material/theming";
@import "../../../../styles/colors.scss";
@import "../../../../styles/variables.scss";

.route-row {
  display: flex;
  flex-direction: row;
  padding: 6px 2px 6px 10px;
  // TODO gap

  &.header {
    cursor: default;
    padding-top: 12px;

    @media (max-width: 959px) {
      display: none;
    }
  }
}

.route-details-container {
  flex: 1 1 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  text-align: left;
}

.route-details {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;

  &.left {
    flex: 1 1 100%;

    @media (max-width: $breakpoint-sm) {
      // TODO use min-width instead
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      justify-content: flex-start;
    }
  }

  &.right {
    flex: 0 0 110px;
  }
}

.route-checkbox {
  flex: 0 0 12px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.route-name {
  flex: 1 1 100%;
}

.route-numbers {
  // TODO take care of boulder places ... different width probably
  display: flex;
  flex: 0 0 160px;

  @media (max-width: $breakpoint-sm) {
    // TODO use min-width instead
    flex-direction: row;
    flex: 1 1 auto;
  }
}

.route-length {
  flex: 0 0 80px;
  height: 20px;
}

.route-grade {
  flex: 0 0 80px;
  position: relative;
}

.route-pitches {
  flex: 0 0 80px;
}

.route-icons {
  flex: 0 0 110px;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  white-space: nowrap;
  text-align: right;
  margin: -4px 0;

  .mat-button {
    color: #0000008a;
  }

  .mat-icon-button {
    color: #0000008a;
    height: 37px;
    width: 37px;
  }
}

h3 {
  padding-top: 28px;
}

.ascent-type-filler {
  width: 36px;
  display: inline-block;
}

.difficulty-vote-included {
  font-weight: bold;
}

.difficulty-vote-author {
  padding-right: 20px;
}

.grade {
  width: 50px;
  display: block;
}

.difficulty-vote-date {
  text-align: right;
}

.route-comment:not(.first) {
  margin-top: 4px;
  padding-top: 10px;
}

.route-comment-content {
  white-space: normal;
}

.route-comment-author {
  margin-top: 5px;
  text-align: right;
  color: $text-gray;
}

.route-expanding-container {
  max-height: 0;
  transition: max-height 300ms ease-in-out;
  overflow: hidden;
}

.route-expanding-details {
  padding: 0 20px 20px 20px;
}

